# Cipher.video

./: .replit  Kardashev2.py  README.md  hardcore.py  main.py  pyproject.toml  replit.md
attached_assets/: Pasted--Kardashev2-py-from-typing-import-Optional-from-openai-import-OpenAI-20-unique-agents-for-the-sw-1761296721253_1761296721254.txt  Pasted--hardcore-py-import-os-import-re-import-time-import-json-import-logging-import-requests-from-typing-1761277367578_1761277367578.txt  Pasted-08-31-15-58-44-message-dicts-self-message-as-message-dict-message-role-08-31-15-58-44--1756681591720_1756681591720.txt  Pasted-Project-Title-Grok-Powered-Coding-Media-Chat-Agent-Description-Build-a-web-based-chat-agent-usi-1756656160556_1756656160557.txt  Pasted-Project-Title-Grok-Powered-Coding-Media-Chat-Agent-With-Secure-Login-Description-Enhance-the--1756659404472_1756659404473.txt  Pasted-You-are-an-expert-developer-proficient-in-multiple-programming-languages-with-extensive-experience--1756658809339_1756658809340.txt  Pasted-import-requests-import-gradio-as-gr-import-json-import-cv2-import-subprocess-import-os-import-re--1756657098197_1756657098198.txt  Pasted-import-requests-import-gradio-as-gr-import-json-import-cv2-import-subprocess-import-sys-import-os-im-1756656010661_1756656010662.txt
static/: style.css
