[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "ffmpeg-python>=0.2.0",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "gradio>=5.44.1",
    "oauthlib>=3.3.1",
    "openai>=1.102.0",
    "opencv-python>=4.12.0.88",
    "opencv-python-headless>=4.12.0.88",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
